backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend # Your backend namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: "test-prep-ai" # Same group name as frontend
spec:
  rules:
    - http:
        paths:
          - path: /login
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /problems
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /questions
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
